--- a/.gitmodules
+++ b/.gitmodules
@@ -3,3 +3,8 @@
 	url = https://github.com/r-universe-org/cran-to-git
 	shallow = true
 	branch = HEAD
+[submodule "LDlinkR"]
+	path = LDlinkR
+	url = https://github.com/cbiit/ldlinkr
+	shallow = true
+	registered = true
